# ssdp-responder

./: CMakeLists.txt  cross.cmake
modify/: CMakeLists.txt  ssdpd.c  ssdpd.h
origin/: .gitignore  config.h
